[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Resources/fonts/FONT_UpheavalPro.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/fonts/UpheavalPro.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/menu_button_normal.png" type="Texture" id=4]
[ext_resource path="res://Assets/menu_background.png" type="Texture" id=5]
[ext_resource path="res://Assets/menu_button_focused.png" type="Texture" id=6]
[ext_resource path="res://Assets/menu_button_pressed.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 3 )

[node name="Menu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 128.0
margin_bottom = 72.0
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 13.0
margin_top = 9.0
margin_right = 114.0
margin_bottom = 62.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 101.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 1 )
text = "SPACE ROGUELITE"
align = 1
valign = 1

[node name="Button1" type="TextureButton" parent="VBoxContainer"]
margin_left = 25.0
margin_top = 12.0
margin_right = 76.0
margin_bottom = 23.0
rect_min_size = Vector2( 51, 11 )
focus_next = NodePath("../Button2")
focus_previous = NodePath("../Button3")
size_flags_horizontal = 4
size_flags_vertical = 4
action_mode = 0
button_mask = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
texture_focused = ExtResource( 6 )

[node name="Label" type="Label" parent="VBoxContainer/Button1"]
margin_right = 51.0
margin_bottom = 11.0
rect_min_size = Vector2( 51, 11 )
custom_fonts/font = ExtResource( 2 )
text = "Start"
align = 1
valign = 1

[node name="Button2" type="TextureButton" parent="VBoxContainer"]
margin_left = 25.0
margin_top = 27.0
margin_right = 76.0
margin_bottom = 38.0
rect_min_size = Vector2( 51, 11 )
focus_next = NodePath("../Button3")
focus_previous = NodePath("../Button1")
size_flags_horizontal = 4
size_flags_vertical = 4
action_mode = 0
button_mask = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
texture_focused = ExtResource( 6 )

[node name="Label" type="Label" parent="VBoxContainer/Button2"]
margin_right = 51.0
margin_bottom = 11.0
rect_min_size = Vector2( 51, 11 )
custom_fonts/font = ExtResource( 2 )
text = "Settings"
align = 1
valign = 1

[node name="Button3" type="TextureButton" parent="VBoxContainer"]
margin_left = 25.0
margin_top = 42.0
margin_right = 76.0
margin_bottom = 53.0
rect_min_size = Vector2( 51, 11 )
focus_next = NodePath("../Button1")
size_flags_horizontal = 4
size_flags_vertical = 4
action_mode = 0
button_mask = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
texture_focused = ExtResource( 6 )

[node name="Label" type="Label" parent="VBoxContainer/Button3"]
margin_right = 51.0
margin_bottom = 11.0
rect_min_size = Vector2( 51, 11 )
custom_fonts/font = ExtResource( 2 )
text = "About"
align = 1
valign = 1

[connection signal="focus_exited" from="VBoxContainer/Button1" to="." method="_on_Button_focus_exited"]
[connection signal="pressed" from="VBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="focus_exited" from="VBoxContainer/Button2" to="." method="_on_Button_focus_exited"]
[connection signal="focus_exited" from="VBoxContainer/Button3" to="." method="_on_Button_focus_exited"]
